fix docs details
